manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-health
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-health
  template:
    metadata:
      labels:
        app: otus-health
    spec:
      containers:
        - name: otus-health
          image: paksergey94/otus-health:0.3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
