manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-health-service
spec:
  selector:
    app: otus-health
  ports:
    - name: http
      port: 80
      targetPort: 8000
