manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-health-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otus-health-service
                port:
                  number: 80
